--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="canonical" href="http://nusaplay-ground.librecat.org/">
-    <meta>
+    <meta name="google-site-verification" content="7tLs0v9ndCJ9HhnlWbas9Y_5YPZN3qWQZTx0muqnQyQ" />
     <link rel="amphtml" href="https://nusabanget.xyz/nusaplay.html" /><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       Nusaplay : Slot Yang paling di gemari Pemain dari Indonesia
  &ndash; </title>
